--- a/appliaction/admin/view/content/article_edit/edit.html
+++ b/appliaction/admin/view/content/article_edit/edit.html
@@ -76,7 +76,7 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
-								<span>摘要</span>
+								<span>中文摘要</span>
 							</label>
 							<div class="col-sm-8">
 								<textarea name="description" placeholder="输入摘要内容" class="form-control">{??$data['description']}</textarea>
@@ -85,11 +85,31 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
-								<span>内容</span>
+								<span>摘要英文</span>
 							</label>
 							<div class="col-sm-8">
-							 	<script id="container" name="content" type="text/plain" class="ue-editor">
+								<textarea name="description_en" placeholder="输入摘要内容" class="form-control">{??$data['description_en']}</textarea>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>中文内容</span>
+							</label>
+							<div class="col-sm-8">
+							 	<script id="content" name="content" type="text/plain" class="ue-editor">
 							 	{??$data['content']}
+							 	</script>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>英文内容</span>
+							</label>
+							<div class="col-sm-8">
+							 	<script id="content_en" name="content_en" type="text/plain" class="ue-editor">
+							 	{??$data['content_en']}
 							 	</script>
 							</div>
 						</div>
