--- a/appliaction/admin/view/content/article_edit/edit_2.html
+++ b/appliaction/admin/view/content/article_edit/edit_2.html
@@ -17,7 +17,7 @@
 					<fieldset>
 						<div class="form-group">
 							<label class="control-label col-sm-3">
-								<span class="text-danger">*</span>
+								<span class="text-danger"></span>
 								<span for="myDate">所属栏目</span>
 							</label>
 							<div class="col-sm-8">
@@ -28,10 +28,21 @@
 								</select>
 							</div>
 						</div>
+						
 						<div class="form-group">
 							<label class="control-label col-sm-3">
-								<span class="text-danger">*</span>
-								<span>教师名称</span>
+								<span class="text-danger"></span>
+								<span>关联老师id</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['teacher_id']}" name="teacher_id" placeholder="老师id"  required class="form-control">	
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>教师名称中文</span>
 							</label>
 							<div class="col-sm-8">
 								<input type="text" value="{??$data['title']}" name="title" placeholder="教师名称"  required class="form-control">	
@@ -39,16 +50,35 @@
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3">
-								<span class="text-danger">*</span>
-								<span>职称</span>
+								<span class="text-danger"></span>
+								<span>教师名称英文</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['btitle']}" name="btitle" placeholder="职称"  required class="form-control">	
+								<input type="text" value="{??$data['btitle']}" name="btitle" placeholder="教师名称"  required class="form-control">	
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>教师职称中文</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['position']}" name="position" placeholder="职称"  required class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3">
-								<span class="text-danger">*</span>
+								<span class="text-danger"></span>
+								<span>教师职称英文</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['position_en']}" name="position_en" placeholder="职称"  required class="form-control">	
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
 								<span>缩略图</span>
 							</label>
 							<div class="col-sm-8">
@@ -59,11 +89,21 @@
 						
 						<div class="form-group">
 							<label class="control-label col-sm-3">
-								<span class="text-danger">*</span>
-								<span>简介</span>
+								<span class="text-danger"></span>
+								<span>中文简介</span>
 							</label>
 							<div class="col-sm-8">
 								<textarea name="description" placeholder="输入摘要内容" class="form-control">{??$data['description']}</textarea>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>英文简介</span>
+							</label>
+							<div class="col-sm-8">
+								<textarea name="description_en" placeholder="输入摘要内容" class="form-control">{??$data['description_en']}</textarea>
 							</div>
 						</div>
 						
