--- a/appliaction/admin/view/content/article_edit/edit_2.html
+++ b/appliaction/admin/view/content/article_edit/edit_2.html
@@ -82,7 +82,16 @@
 								<span>缩略图</span>
 							</label>
 							<div class="col-sm-8">
-								<a class="btn btn-primary btn-ablum" data-name="thumb" data-value='{??$data['thumb']}' data-path="article" data-max="1">添加图片</a>
+								<a class="btn btn-primary btn-ablum" data-name="thumb" data-value='{??$data['thumb']}' data-path="article" data-max="10">添加图片</a>
+							</div>
+						</div>		
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>缩略图2</span>
+							</label>
+							<div class="col-sm-8">
+								<a class="btn btn-primary btn-ablum" data-name="thumb2" data-value='{??$data['thumb']}' data-path="article" data-max="10">添加图片</a>
 							</div>
 						</div>						
 						
