--- a/appliaction/admin/view/content/article_edit/edit_3.html
+++ b/appliaction/admin/view/content/article_edit/edit_3.html
@@ -35,7 +35,7 @@
 								<span>关联老师id</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['teacher_id']}" name="teacher_id" placeholder="老师用户id"  required class="form-control">	
+								<input type="text" value="{??$data['teacher_id']}" name="info[teacher_id]" placeholder="老师用户id"  required class="form-control">	
 							</div>
 						</div>
 
@@ -57,14 +57,13 @@
 								<input type="text" value="{??$data['btitle']}" name="btitle" placeholder="课程名称"  required class="form-control">	
 							</div>
 						</div>
-
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
 								<span>上课时间中文[文案]</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['position']}" name="position" placeholder="上课时间中文"  required class="form-control">	
+								<input type="text" value="{??$data['class_time']}" name="info[class_time]" placeholder="上课时间中文"  required class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -73,7 +72,7 @@
 								<span>上课时间英文[文案]</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['position']}" name="position" placeholder="上课时间英文"  required class="form-control">	
+								<input type="text" value="{??$data['class_time_en']}" name="info[class_time_en]" placeholder="上课时间英文"  required class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -82,7 +81,16 @@
 								<span>课程时间[课时数]</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['position']}" name="position" placeholder="课程时间" class="form-control">	
+								<input type="text" value="{??$data['num']}" name="info[num]" placeholder="课程时间" class="form-control">	
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
+								<span>可获课程学分</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['credit']}" name="info[credit]" placeholder="可获课程学分"  required class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -91,7 +99,7 @@
 								<span>售卖价格</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['position']}" name="position" placeholder="售卖价格" class="form-control">	
+								<input type="text" value="{??$data['sale_price']}" name="info[sale_price]" placeholder="售卖价格" class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -100,7 +108,7 @@
 								<span>活动价格</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['position']}" name="position" placeholder="活动价格" class="form-control">	
+								<input type="text" value="{??$data['dis_price']}" name="info[dis_price]" placeholder="活动价格" class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -109,7 +117,7 @@
 								<span>购买人数基数</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['position']}" name="position" placeholder="购买人数基数" class="form-control">	
+								<input type="text" value="{??$data['base_orders']}" name="info[base_orders]" placeholder="购买人数基数" class="form-control">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -118,7 +126,7 @@
 								<span>课程开始时间</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['start_time']}" name="start_time" class="form-control data-time">	
+								<input type="text" value="{??$data['start_time']}" name="info[start_time]" class="form-control data-time">	
 							</div>
 						</div>
 						<div class="form-group">
@@ -127,7 +135,7 @@
 								<span>课程结束时间</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['end_time']}" name="end_time"   class="form-control data-time">		
+								<input type="text" value="{??$data['end_time']}" name="info[end_time]" class="form-control data-time">		
 							</div>
 						</div>
 						<div class="form-group">
@@ -138,7 +146,7 @@
 							<div class="col-sm-8">
 								{loop $other['featuredCopy'] $key $value}
 									<label class="checkbox-inline">
-										<input type="checkbox" class="checkbox" value="{$key}" name="featured[]" data-checked='{F:json_encode($checkValue)}'>{$value}
+										<input type="checkbox" class="checkbox" value="{$key}" name="info[characteristics][]" data-checked='{F:json_encode($characteristics)}'>{$value}
 									</label>
 								{/loop}
 							</div>
@@ -149,7 +157,7 @@
 								<span>课程类型</span>
 							</label>
 							<div class="col-sm-8">
-								<select data-selected="{??$data['kc_type']}" name="kc_type" class="form-control w160">
+								<select data-selected="{??$data['class_type']}" name="info[class_type]" class="form-control w160">
                                		<option value="1">一对一</option>
                                		<option value="2">一对多</option>
 								</select>
@@ -161,18 +169,35 @@
 								<span>课程安排</span>
 							</label>
 							<div class="col-sm-8" id="course">
+							{if $other['schedule']}
+								{loop $other['schedule'] $key $value}
+									<div class="container-fluid time" style="padding-bottom: 10px;">
+										<div class="col-sm-3 pull-left">
+											<input type="text" value="{$value['time']}" name="syllabus[]"  class="form-control data-time" data-format="yyyy-MM-dd HH:mm" data-type="datetime">	
+										</div>
+										<div class="col-sm-2 pull-left">
+											<input type="text" value="{$value['credit']}" name="credit[]"  class="form-control" placeholder="学分">	
+										</div>
+										<div class="col-sm-5">
+											<a class="btn btn-primary add-syllabus">添加</a>
+											<a class="btn btn-primary del-add-syllabus">删除</a>
+										</div>
+									</div>
+								{/loop}
+							{else}
 								<div class="container-fluid time" style="padding-bottom: 10px;">
 									<div class="col-sm-3 pull-left">
-										<input type="text" value="{??$data['syllabus']}" name="syllabus[]"  class="form-control data-time" data-format="yyyy-dd-mm HH:mm" data-type="datetime">	
+										<input type="text" value="" name="syllabus[]"  class="form-control data-time" data-format="yyyy-MM-dd HH:mm" data-type="datetime" data-isnull='1'>	
 									</div>
 									<div class="col-sm-2 pull-left">
-										<input type="text" value="{??$data['credit']}" name="credit[]"  class="form-control" placeholder="学分">	
+										<input type="text" value="0" name="credit[]"  class="form-control" placeholder="学分">	
 									</div>
 									<div class="col-sm-5">
 										<a class="btn btn-primary add-syllabus">添加</a>
 										<a class="btn btn-primary del-add-syllabus">删除</a>
 									</div>
 								</div>
+							{/if}
 							</div>
 						</div>
 						<div class="form-group">
@@ -192,7 +217,7 @@
 								<span>招生对象中文</span>
 							</label>
 							<div class="col-sm-8">
-								<textarea name="description" placeholder="输入摘要内容" class="form-control">{??$data['description']}</textarea>
+								<textarea name="info[recruit]" placeholder="招生对象中文" class="form-control">{??$data['recruit']}</textarea>
 							</div>
 						</div>
 
@@ -202,7 +227,7 @@
 								<span>招生对象英文</span>
 							</label>
 							<div class="col-sm-8">
-								<textarea name="description_en" placeholder="输入摘要内容" class="form-control">{??$data['description_en']}</textarea>
+								<textarea name="info[recruit_en]" placeholder="招生对象英文" class="form-control">{??$data['recruit_en']}</textarea>
 							</div>
 						</div>
 						<div class="form-group">
@@ -211,7 +236,7 @@
 								<span>中文内容</span>
 							</label>
 							<div class="col-sm-8">
-							 	<script id="content" name="content" type="text/plain" class="ue-editor">
+							 	<script id="content" name="info[content]" type="text/plain" class="ue-editor">
 							 	{??$data['content']}
 							 	</script>
 							</div>
@@ -222,7 +247,7 @@
 								<span>英文内容</span>
 							</label>
 							<div class="col-sm-8">
-							 	<script id="content_en" name="content_en" type="text/plain" class="ue-editor">
+							 	<script id="content_en" name="info[content_en]" type="text/plain" class="ue-editor">
 							 	{??$data['content_en']}
 							 	</script>
 							</div>
@@ -263,50 +288,53 @@
 		</div>
 	</div>
 	{include /public/global_js}
-	<script type="text/javascript">
-	//增加课程
-	$('#course').on('click','.add-syllabus',function(){
-		$(this).parents('.container-fluid').parent().append($(this).parents('.container-fluid').clone());
-		//渲染时间插件
-	    $('.data-time').each(function(){
-	    	//判断标记 根据标记渲染
-	    	if(laydate.index  <= $('.data-time').index(this) && laydate.index >= 3){
-	    		console.log($('.data-time').index(this));
-	    		var time    = 0;                    //int
-		        var min     = $(this).attr('data-min');         // string int
-		        var max     = $(this).attr('data-max');         // string int
-		        var format    = $(this).attr('data-format');
-		        var type    = $(this).attr('data-type');        //year month date time datetime
+<script type="text/javascript">
+//增加课程
+$('#course').on('click','.add-syllabus',function(){
+	$(this).parents('.container-fluid').parent().append($(this).parents('.container-fluid').clone());
+	//渲染时间插件
+    $('.data-time').each(function(){
+    	//判断标记 根据标记渲染 防止重复渲染
+    	if(laydate.index  <= $('.data-time').index(this) && laydate.index >= 3){
+    		//查看源码后发现lyadata未每一个控件设置了唯一值 
+    		//直接复制的时候会吧lay-key的参数复制过来 我这里需要清除掉
+    		//因为这个问题 会导致他不停的执行关闭操作 是个坑 不知道
+    		//$(this).unbind();
+    		$(this).removeAttr('lay-key',0); 
+    		var time    = 0;                    //int
+	        var min     = $(this).attr('data-min');         // string int
+	        var max     = $(this).attr('data-max');         // string int
+	        var format    = $(this).attr('data-format');
+	        var type    = $(this).attr('data-type');        //year month date time datetime
 
-		        if(!format){ format  = 'yyyy-MM-dd'; }
-		        if(!min){ min = '1900-1-1';}
-		        if(!max){ max = '2099-12-31';}
-		        if(!type){ type = 'date';}
-		        if(!time){ time = Date.parse(new Date());}
+	        if(!format){ format  = 'yyyy-MM-dd'; }
+	        if(!min){ min = '1900-1-1';}
+	        if(!max){ max = '2099-12-31';}
+	        if(!type){ type = 'date';}
+	        if(!time){ time = Date.parse(new Date());}
 
-		        laydate.render({
-		          elem: this, //指定元素
-		          value:new Date(time),
-		          format:format,
-		          type:type,
-		          min:min,
-		          max:max,
-		        });
-		      
-	    	}
-	    })
-	})
+	        laydate.render({
+	          elem: this, //指定元素
+	          value:new Date(time),
+	          format:format,
+	          type:type,
+	          min:min,
+	          max:max,
+	        });
+    	}
+    })
+})
 
-	//删除课程
-	$('#course').on('click','.del-add-syllabus',function(){
-		if($('.del-add-syllabus').length > 1){
-			$(this).parents('.container-fluid').remove();
-			laydate.index -= 1; //清除时间插件标记
-		}else{
-			$(this).parents().find('input[name="syllabus[]"]').val('');
-			$(this).parents().find('input[name="credit[]"]').val('0');
-		}
-	})
-	</script>
+//删除课程
+$('#course').on('click','.del-add-syllabus',function(){
+	if($('.del-add-syllabus').length > 1){
+		$(this).parents('.container-fluid').remove();
+		laydate.index -= 1; //清除时间插件标记
+	}else{
+		$(this).parents().find('input[name="syllabus[]"]').val('');
+		$(this).parents().find('input[name="credit[]"]').val('0');
+	}
+})
+</script>
 </body>
 </html>
